--- a/chat-app-api/chat-app-api/appsettings.json
+++ b/chat-app-api/chat-app-api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServerConnStr": "Data Source=HBT-PRODESK-1\\SQLEXPRESS;Initial Catalog = AuthAPIDb; Intergrated Security = true"
+  }
 }
