--- a/chat-app-api/chat-app-api/chat-app-api.csproj
+++ b/chat-app-api/chat-app-api/chat-app-api.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Helpers\" />
     <Folder Include="wwwroot\ProfilePics\" />
   </ItemGroup>
 
